Employer journey - built in the new radio group code

--- a/app/views/v4/employer/create/select-training-provider.html
+++ b/app/views/v4/employer/create/select-training-provider.html
@@ -27,123 +27,76 @@ Have you found a training provider? - Your apprenticeship adverts - {{serviceNam
       </div>
     {% endif %}
     <form action="" method="post">
-      <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <span class="govuk-caption-l">{%if data.training_level %}{{data.training_level}}{% else %}Accountancy Taxation Professional{%endif%}</span>
-          <h1 class="govuk-fieldset__heading">
-            Have you found a training provider?
-          </h1>
-        </legend>
-        <p class="govuk-body">You will need to use a registered training provider who offers <span class="govuk-!-font-weight-bold">{% if data.training_level %}{{data.training_level}}{% else %}Aviation ground operative, Level: 2 (Standard){% endif %}</span> training.
-          <!-- "<span class="govuk-!-font-weight-bold">{{data.training_level}}</span>"</p> -->
-          <div class="govuk-form-group">
-            <div class="govuk-radios govuk-radios--conditional" data-module="radios">            
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="found_training_provider" name="has_training_provider" type="radio" value="yes" {% if data.has_training_provider=="yes" %}checked="checked" {%endif%}data-aria-controls="conditional-how-contacted-conditional-1">
-                <label class="govuk-label govuk-radios__label" for="found_training_provider">
-                  Yes
-                </label>               
-              </div>
-              <div class="govuk-radios__conditional {% if not data.has_training_provider == " yes" and data.edit=="yes" %}govuk-radios__conditional--hidden{% endif %}" id="conditional-how-contacted-conditional-1">
-                <div class="govuk-form-group search-field search-field-darker {%if data.hasError and data.errorType == 'provider'%}govuk-form-group--error{% endif%}">
-                  <input type="hidden" name="clientsFilter" value="new">
-                  <div class="search-input ">
-                    <label class="govuk-label" for="contact-by-email">
-                      <span class="govuk-hint">
-                        Enter the training provider name or reference number (UKPRN).
-                        UKPRN is 8 numbers. For example, 12345678.
-                      </span>
-                    </label>
-                    {% if data.hasError and data.errorType == "provider" %}
-                    <span id="provider-need-update" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> {{data.providerName}} can no longer be used as a training provider.
-                    </span>
-                    {% endif %}
-                    <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
-                      <div class="autocomplete__wrapper">
-                        <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px 0px 0px 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
-                          <span>No search results.</span>
-                          <span>,,</span>
-                        </div>
-                        <p id="search-default-value" class="govuk-visually-hidden">{% if (data.edit=="yes" and data.has_training_provider == "yes") or data.hasError %}{{data.providerName}} {{data.UKPRN}}{%endif%}</p>
-                        <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="searchClients" name="providerName" placeholder="" role="combobox" type="text" value="{% if data.edit==" yes" %}{{data.providerName}}
-                          {{data.UKPRN}} {%endif%}">
-                        <ul class="autocomplete__menu autocomplete__menu--overlay autocomplete__menu--hidden" id="searchClients__listbox" role="listbox"></ul>
-                      </div>
-                    </div>
-                    <input class="form-control form-control-3-4" name="" id="searchClients-old" type="text" value="" style="display: none;">
-                  </div>
-                  <div class="search-submit ">
-                    <button class="button govuk-visually-hidden" type="submit" id="searchClientsSubmit" name="searchClientsSubmit" value="Search clients">Search clients</button>
-                  </div>
-
-                  <p class="govuk-body"><a href="#" id="clear-search" class="govuk-link">Clear search</a></p>
-                </div>
-
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="not_found_training_provider" name="has_training_provider" type="radio" value="no" data-aria-controls="conditional-not-found" {% if data.has_training_provider=="no" and data.edit=="yes" %}checked="checked"
-                  {%endif%}>
-                <label class="govuk-label govuk-radios__label" for="not_found_training_provider">
-                  No, I will choose one later
-                </label> </div>
-              <div class="govuk-radios__conditional {% if data.has_training_provider == " no" and data.edit=="yes" %}govuk-radios__conditional--hidden{%endif%}" id="conditional-not-found">
-                <div class="govuk-form-group">
-                  <p class="govuk-body">You will need to add a training provider before submitting the advert. If you need help, you can <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/Apprenticeship/SearchForFrameworkProviders?frameworkId=539-2-14">find a training provider (opens
-                      in new tab or window)</a> based on the apprenticeship training.</p>
-                </div>
-
-              </div>
-            </div>
-          </div>
-      </fieldset>
-
-
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <span class="govuk-caption-l">{%if data.training_level %}{{data.training_level}}{% else %}Business administration apprenticeship{%endif%}</span>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+            <span class="govuk-caption-l">{% if data.title %}{{data.title}}{% else %}Business Administration Apprentice{% endif %}</span>
             <h1 class="govuk-fieldset__heading">
               Have you found a training provider?
             </h1>
           </legend>
-          <div id="has_training_provider-hint" class="govuk-hint">
-            You will need to use a registered training provider who offers <span class="govuk-!-font-weight-bold">{% if data.training_level %}{{data.training_level}}{% else %}Aviation ground operative, Level: 2 (Standard){% endif %}</span> training.
+          <div id="contact-hint" class="govuk-hint">
+            You will need to use a registered training provider who offers <span class="govuk-!-font-weight-bold">{% if data.training_level %}{{data.training_level}}{% else %}Business administration, Level: 2 (Standard){% endif %}</span> training.
           </div>
           <div class="govuk-radios" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input id="found_training_provider" name="has_training_provider" type="radio" value="yes" {% if data.has_training_provider=="yes" %} checked="checked" {%endif%} data-aria-controls="conditional-how-contacted-conditional-1">
-              <label class="govuk-label govuk-radios__label" for="found_training_provider">
+              <input class="govuk-radios__input" id="found_training_provider" name="has_training_provider" type="radio" value="email" data-aria-controls="conditional-contact">
+              <label class="govuk-label govuk-radios__label" for="contact">
                 Yes
               </label>
             </div>
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
-              <div class="govuk-form-group">
-                <label class="govuk-label" for="contact-by-email">
-                  Enter the training provider name or reference number (UKPRN). UKPRN is 8 numbers. For example, 12345678.
-                </label>
-                <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email"></div>      
+            <!--<div class="govuk-radios__conditional {% if not data.has_training_provider == "yes" and data.edit=="yes" %}govuk-radios__conditional--hidden{% endif %}" id="conditional-how-contacted-conditional-1">-->
+              <div class="govuk-radios__conditional {% if not data.has_training_provider == "yes" and data.edit=="yes" %}govuk-radios__conditional--hidden{% endif %}" id="conditional-contact">
+              <div class="govuk-form-group search-field search-field-darker {%if data.hasError and data.errorType == 'provider'%}govuk-form-group--error{% endif%}">
+                <input type="hidden" name="clientsFilter" value="new">
+                <div class="search-input ">
+                  <label class="govuk-label" for="contact-by-email">
+                    <span class="govuk-hint">
+                      Enter the training provider name or reference number (UKPRN).
+                      UKPRN is 8 numbers. For example, 12345678.
+                    </span>
+                  </label>
+                  {% if data.hasError and data.errorType == "provider" %}
+                  <span id="provider-need-update" class="govuk-error-message">
+                      <span class="govuk-visually-hidden">Error:</span> {{data.providerName}} can no longer be used as a training provider.
+                  </span>
+                  {% endif %}
+                  <div class="autocomplete__parent_wrapper govuk-!-margin-bottom-2">
+                    <div class="autocomplete__wrapper">
+                      <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px 0px 0px 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">
+                        <span>No search results.</span>
+                        <span>,,</span>
+                      </div>
+                      <p id="search-default-value" class="govuk-visually-hidden">{% if (data.edit=="yes" and data.has_training_provider == "yes") or data.hasError %}{{data.providerName}} {{data.UKPRN}}{%endif%}</p>
+                      <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="searchClients" name="providerName" placeholder="" role="combobox" type="text" value="{% if data.edit==" yes" %}{{data.providerName}}
+                        {{data.UKPRN}} {%endif%}">
+                      <ul class="autocomplete__menu autocomplete__menu--overlay autocomplete__menu--hidden" id="searchClients__listbox" role="listbox"></ul>
+                    </div>
+                  </div>
+                  <input class="form-control form-control-3-4" name="" id="searchClients-old" type="text" value="" style="display: none;">
+                </div>
+                <div class="search-submit ">
+                  <button class="button govuk-visually-hidden" type="submit" id="searchClientsSubmit" name="searchClientsSubmit" value="Search clients">Search clients</button>
+                </div>
+                <p class="govuk-body"><a href="#" id="clear-search" class="govuk-link">Clear search</a></p>
+              </div>
             </div>
-
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="contact-2" name="contact" type="radio" value="phone" data-aria-controls="conditional-contact-2">
+              <input class="govuk-radios__input" id="not_found_training_provider" name="has_training_provider" type="radio" value="phone" data-aria-controls="conditional-contact-2">
               <label class="govuk-label govuk-radios__label" for="contact-2">
-                No, I'll choose one later
+                No, I will choose one later
               </label>
             </div>
-
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
               <div class="govuk-form-group">
-                <label class="govuk-label" for="contact-by-phone">
-                  You will need to add a training provider before submitting the advert. If you need help, you can <a href="https://findapprenticeshiptraining.apprenticeships.education.gov.uk/Apprenticeship/SearchForFrameworkProviders?frameworkId=539-2-14">find a training provider (opens
-                    in new tab or window)</a> based on the apprenticeship training.
-                </label>
-                <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel" autocomplete="tel"></div>      
+                <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                  You will need to add a training provider before submitting the advert. If you need help, you can <a href="" class="govuk-link govuk-link--not-visited-state">find a training provider (opens in new tab or window)</a> based on the apprenticeship training.
+                </div>
+              </div>
             </div>            
-
-          </div>      
-        </fieldset>
-        
+          </div>
+      
+        </fieldset>        
         <div class="govuk-form-group govuk-!-margin-top-9">
           <button type="submit" class="govuk-button">Save and continue</button><br /><br />
           <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
