--- a/app/views/v4/employer/create/wages.html
+++ b/app/views/v4/employer/create/wages.html
@@ -9,7 +9,6 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
 <!-- {{minWage}} -->
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <a href="javascript:history.back()" class="govuk-back-link">Back</a>
     {% if data.error == "wages" %}
     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
       <h2 class="govuk-error-summary__title" id="error-summary-title">
@@ -24,69 +23,84 @@ How much would you like to pay the apprentice? - Your apprenticeship adverts - {
       </div>
     </div>
     {% endif %}
-    <h1 class="govuk-heading-xl">How much would you like to pay the apprentice?</h1>
-    <p class="govuk-body">Pay will show as a yearly figure on your advert. <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">View the​ ​National Minimum Wage for apprentices (opens in a new tab or window)​</a>.<br></p>
-    <form method="post">
-      <div class="govuk-form-group ">
-        <fieldset class="govuk-fieldset">
-          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="wage-type-national-minimum-wage" name="WageType" type="radio" value="nationalMinWage" data-aria-controls="MinApprentice-wage-conditional" {% if data.WageType=="nationalMinWage" %}checked="checked"
-                {% endif %}>
-              <label class="govuk-label govuk-radios__label" for="wage-type-national-minimum-wage">
-                National Minimum Wage
-              </label>
-            </div>
-
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinApprentice-wage-conditional">
-              <div class="govuk-form-group">
-                <p class="govuk-body">
-                  <span class="govuk-hint">From April 2021, the National Minimum Wage is sbetween £4.62 and £8.91 depending on the candidates age.<br> <br> On the advert this will be displayed as a yearly figure of £4,804.80 to £9,266.40</span>
-                </p>
+    <div class="govuk-form-group">
+      <form method="post">
+      <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+          <h1 class="govuk-fieldset__heading">
+            How much would you like to pay the apprentice?
+          </h1>
+        </legend>
+        <div id="contact-hint" class="govuk-hint">
+          Pay will show as a yearly figure on your advert. <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">View the​ ​National Minimum Wage for apprentices (opens in a new tab or window)​</a>.
+        </div>
+        <div class="govuk-radios" data-module="govuk-radios">
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="wage-type-national-minimum-wage" name="WageType" type="radio" value="nationalMinWage" data-aria-controls="MinApprentice-wage-conditional" {% if data.WageType=="nationalMinWage" %}checked="checked"
+            {% endif %}>
+            <label class="govuk-label govuk-radios__label" for="wage-type-national-minimum-wage">
+              National Minimum Wage
+            </label>
+          </div>
+          <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinApprentice-wage-conditional">
+            <div class="govuk-form-group">
+              <div id="MinApprentice-wage-conditional" class="govuk-hint govuk-radios__hint">
+                From 1 April 2021, the National Minimum Wage is between £4.62 and £8.91 an hour, depending on the candidate's age.
+                <br><br>
+                On the advert, this will be displayed as a yearly wage of £5,525.52 to £10,656.36.
               </div>
             </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="wage-type-national-minimum-wage-for-apprentices" name="WageType" type="radio" value="nationalMinApprenticeWage" data-aria-controls="MinNat-wage-conditional" {% if data.WageType=="nationalMinApprenticeWage"
-                %}checked="checked" {% endif %}>
-              <label class="govuk-label govuk-radios__label" for="wage-type-national-minimum-wage-for-apprentices">
-                National Minimum Wage for apprentices
-              </label>
-            </div>
-
-            <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinNat-wage-conditional">
-              <div class="govuk-form-group">
-                <p class="govuk-body">
-                  <span class="govuk-hint">From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour. </p>
-                  <p class="govuk-hint">On the advert, this will be displayed as a yearly wage of £4,472.</p>
+          </div>  
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="wage-type-national-minimum-wage-for-apprentices" name="WageType" type="radio" value="nationalMinApprenticeWage" data-aria-controls="MinNat-wage-conditional" {% if data.WageType=="nationalMinApprenticeWage"
+            %}checked="checked" {% endif %}>
+            <label class="govuk-label govuk-radios__label" for="wage-type-national-minimum-wage-for-apprentices">
+              National Minimum Wage for apprentices
+            </label>
+          </div>
+          <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="MinNat-wage-conditional">
+            <div class="govuk-form-group">
+              <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour.
+                <br><br>
+                On the advert, this will be displayed as a yearly wage of £5,142.80.
               </div>
             </div>
-
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="wage-type-fixed" name="WageType" type="radio" value="fixedWage" data-aria-controls="fixed-wage-conditional" {% if data.WageType=="fixedWage" or  data.error == "wages" %}checked="checked" {% endif %}>
-              <label class="govuk-label govuk-radios__label" for="wage-type-fixed">
-                Set wage yourself
-              </label>
-            </div>
-
-            <div class="govuk-radios__conditional {% if not data.WageType %}govuk-radios__conditional--hidden{% endif %}" id="fixed-wage-conditional">
-              <div class="govuk-form-group {% if data.error == "wages" %}govuk-form-group--error{% endif %}">
-                <label class="govuk-label">Yearly wage</label>
-                <p class="govuk-body govuk-hint">
-                  This must be more than the <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">National Minimum Wage for apprentices (opens in a new tab or window)​</a>.</p>
-                <p class="govuk-body govuk-hint">From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour. Based on working hours of {{data.weeklyHours}} hours per week, you'll need to pay a yearly figure of at least <span class="govuk-!-font-weight-bold">£{{minWage}}</span>
-                </p>
-                {% if data.error == "wages"%}
-                <span id="yearly-wage-issue" class="govuk-error-message">
-                  <span class="govuk-visually-hidden">Error:</span> The yearly wage must be at least £{{minWage}}
-                </span>
-                {% endif %}
-                <input class="govuk-input govuk-input--width-10 {% if data.error == "wages" %}govuk-input--error{% endif %}" id="FixedWageYearlyAmount" name="FixedWageYearlyAmount" type="text" {% if data.FixedWageYearlyAmount %}value="{{data.FixedWageYearlyAmount}}" {% endif %}>
+          </div>  
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="wage-type-fixed" name="WageType" type="radio" value="fixedWage" data-aria-controls="fixed-wage-conditional" {% if data.WageType=="fixedWage" or  data.error == "wages" %}checked="checked" {% endif %}>
+            <label class="govuk-label govuk-radios__label" for="wage-type-fixed">
+              Set wage yourself
+            </label>
+          </div>
+          <div class="govuk-radios__conditional {% if not data.WageType %}govuk-radios__conditional--hidden{% endif %}" id="fixed-wage-conditional">
+            <div class="govuk-form-group {% if data.error == "wages" %}govuk-form-group--error{% endif %}">
+              <!--<label class="govuk-label">Yearly wage</label>-->
+              <p class="govuk-body govuk-hint">
+                This must be more than the <a href="https://www.gov.uk/national-minimum-wage-rates" rel="noopener" target="_blank">National Minimum Wage for apprentices (opens in a new tab or window)​</a>.
+              </p>
+              <p class="govuk-body govuk-hint">
+                From 1 April 2021, the National Minimum Wage for apprentices is £4.30 an hour.
+              </p>                
+              <p class="govuk-body govuk-hint">
+                Based on 23 working hours a week, you'll need to pay a yearly wage of at least £5,142.80.
+              </p>
+              {% if data.error == "wages"%}
+              <span id="yearly-wage-issue" class="govuk-error-message">
+                <span class="govuk-visually-hidden">Error:</span> The yearly wage must be at least £{{minWage}}
+              </span>
+              {% endif %}
+              <div class="govuk-input__wrapper">
+                <div class="govuk-input__prefix" aria-hidden="true">£</div>
+                <input class="govuk-input govuk-input--width-5 {% if data.error == "wages" %}govuk-input--error{% endif %}" id="FixedWageYearlyAmount" name="FixedWageYearlyAmount" type="text" {% if data.FixedWageYearlyAmount %}value="{{data.FixedWageYearlyAmount}}" {% endif %}>
+                <div class="govuk-input__suffix" aria-hidden="true">yearly</div>
               </div>
             </div>
           </div>
-        </fieldset>
-      </div>
+        </div>
+    
+      </fieldset>
+    </div>
        
       <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="250">
         <div class="govuk-form-group">
