Employer journey - display name typo fixed

--- a/app/views/v4/employer/create/display-name.html
+++ b/app/views/v4/employer/create/display-name.html
@@ -39,7 +39,7 @@ What employer name do you want on your advert? - Your apprenticeship adverts - {
               <input class="govuk-radios__input" id="display-name-anonymous" name="selected_display_name" type="radio"
                 value="anonymous" data-search-value="Organisation" data-aria-controls="anonymous-conditional">
               <label class="govuk-label govuk-radios__label" for="display-name-anonymous">
-                I do not want an employer a name on my advert (be anonymous)<br>
+                I do not want an employer name on my advert (be anonymous)<br>
                 <span class="govuk-hint">This could mean fewer people view your advert.</span>
               </label>
             </div>
