Employer journey - amend add skills button to be secondary - diabled button to avoid the button press

--- a/app/views/v4/employer/create/skills.html
+++ b/app/views/v4/employer/create/skills.html
@@ -110,7 +110,8 @@ What skills and personal qualities does the applicants need to have? - Your appr
                 <label class="govuk-label" for="AddCustomSkillName">Add a new skill or personal quality</label>
                 <span class="error-message field-validation-valid" data-valmsg-for="AddCustomSkillName" data-valmsg-replace="true"></span>
                 <input value="" type="text" class="govuk-input govuk-input--width-20" maxlength="30" id="AddCustomSkillName" name="AddCustomSkillName">
-                <button name="AddCustomSkillAction" id="add-custom-skill" value="AddCustomSkill" type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">&plus; Add this skill</button>
+                <!--<button name="AddCustomSkillAction" id="add-custom-skill" value="AddCustomSkill" type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">&plus; Add this skill</button>-->
+                <button class="govuk-button govuk-button--secondary" disabled>&plus; Add this skill</button>
             </div>
               </div>
               <br>
