--- a/app/views/v4/provider/create/confirmation.html
+++ b/app/views/v4/provider/create/confirmation.html
@@ -1,7 +1,7 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Manage apprentices
+Vacancy submitted for approval - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block content %}
@@ -10,10 +10,10 @@ Manage apprentices
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Advert submitted for approval
+        Vacancy submitted for approval
       </h1>
       <div class="govuk-panel__body">
-        The advert reference number is
+        The vacancy reference number is
         <br><strong>VAC1000000965</strong>
       </div>
     </div>
@@ -21,25 +21,23 @@ Manage apprentices
     {% if data.user == employer %}{% set pronoun = "your" %}{%else%}{% set pronoun = "the" %}{%endif%}
     {% if data.has_notifications == "yes"%}
 
-    <p class="govuk-body">We’ll check the advert within one working day and let you know by email if you need to make any edits. <a href="../notifications/notification-preferences">Manage your emails</a>.</p>
+    <p class="govuk-body">We’ll check the vacancy within one working day and let you know by email if you need to make any edits. <a href="../notifications/notification-preferences">Manage your emails</a>.</p>
     {% else %}
     <p class="govuk-body">
       We’ll check the a and tell you within 24 hours if you need to make any edits. If the vacancy is not approved, we’ll let you know on the dashboard what changes you’ll need to make. <a href="../notifications/notification-preferences-new">Manage your recruitment emails</a> if you’d rather get an email.</p>
     {% endif %}
-    <p class="govuk-body">When we approve your advert, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service</a> (opens in a new tab or window).</p>
+    <p class="govuk-body">When we approve your vacancy, it will appear on the ​<a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship service</a> (opens in a new tab or window).</p>
     <form method="post">
     <div class="form-group inline">
       <div class="form-group">
-        <a class="govuk-button" href="create-vacancy">Create another advert</a><br /><br />
-          {% if data.journey=='new' and data.user=='employer'%}
-          <a href="../dashboard-one" class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
-          {% elseif data.journey=='new' and data.user=='provider'%}
-          <a href="../dashboard-pending" class="ggovuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
-          {% elseif data.user == 'provider' %}
-          <a href="../dashboard " class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>
-          {% else %}
-          <a href="../dashboard?user=employer" class="govuk-button" data-module="govuk-body das-button--link" type="submit">Return to dashboard</a>
-          {% endif %}
+        <a class="govuk-button" href="create-vacancy">Create another vacancy</a><br /><br />
+        {% if data.journey=='new'%}
+        <a href="../dashboard-one" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
+        <!--<a href="../dashboard-one" class="govuk-body das-button--link" data-module="govuk-button" type="submit">Return to dashboard</a>-->
+        {% else %}
+        <a href="../dashboard" class="govuk-link govuk-link--no-visited-state">Return to dashboard</a>
+        <!--<a href="../dashboard?user=employer" class="govuk-button" data-module="govuk-body das-button--link" type="submit">Return to dashboard</a>-->
+        {% endif %}
 
       </div>
     </div>
