--- a/app/views/v4/provider/create/employers-select.html
+++ b/app/views/v4/provider/create/employers-select.html
@@ -31,9 +31,8 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
     <!-- <span class="govuk-caption-xl">Recuitment</span> -->
 
     <h1 class="govuk-heading-xl">Which employer do you want to create a vacancy for?</h1>
-
+    <form method="post" id="employers-form" action="">
     <!--<form method="post" id="employers-form" action="create-vacancy">-->
-    <form method="post" id="employers-form" action="title">
       {% if data.employerAmount > 10 %}
       <fieldset class="govuk-fieldset">
         <legend class="govuk-visually-hidden">Search your employers</legend>
@@ -145,8 +144,11 @@ Which employer do you want to create a vacancy for? - Recruitment - {{serviceNam
         </div>
       </details>
 
-      <button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>
-      <!--<br /><br />-->
+      <!--<button type="submit" class="govuk-button" data-module="govuk-button">Save and continue</button>-->
+      {{ govukButton({
+        text: "Save and continue",
+        href: "title"
+      }) }}      
       <a href="../dashboard" class="govuk-body das-button--link">Cancel</a>
     </form>
 
