Employer journey - added inset text telling users how long the first advert should take

--- a/app/views/v4/employer/create/start-page.html
+++ b/app/views/v4/employer/create/start-page.html
@@ -34,6 +34,10 @@ Create an advert - Your apprenticeship adverts - {{serviceName}} - GOV.UK
             <li>the amount you'd like to pay your apprentice</li>
         </ul>
 
+        <div class="govuk-inset-text">
+          It should take no longer than 30 minutes to create your first advert.
+        </div>
+
       {% set _forwardLink = "task-list" %}
 
       {{ govukButton({
